<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="155dp"
        android:layout_height="166dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/fav"
        android:contentDescription="@string/favourites"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="155dp"
        android:layout_height="161dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/alacarte"

        android:contentDescription="@string/alacarte"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="156dp"
        android:layout_height="166dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/com"
        android:contentDescription="@string/combo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="155dp"
        android:layout_height="166dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/meal"
        android:contentDescription="@string/meal_plan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>