<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!--  <View
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#554E96"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />-->

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="418dp"
      android:layout_height="725dp"
      android:scaleType="fitXY"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/login_background" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="24dp"
      android:text="Sign Up"
      android:textSize="24sp"
      app:layout_constraintStart_toEndOf="@+id/back_arrow"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/back_arrow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:src="@drawable/ic_arrow_left_black_48dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.011"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="90dp"
      android:layout_height="60dp"
      android:layout_marginTop="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.133"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/back_arrow"
      app:srcCompat="@drawable/ic_user" />

  <TextView
      android:id="@+id/name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text=""

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.096"
      app:layout_constraintStart_toEndOf="@+id/imageView5"
      app:layout_constraintTop_toTopOf="@+id/imageView5"
      app:layout_constraintVertical_bias="0.0" />


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/firstNameTV"
      android:layout_width="210dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="40dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="Name"
      android:textColorHint="@color/colorPrimary"
      app:errorEnabled="true"
      app:layout_constraintBottom_toBottomOf="@+id/firstname"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/firstname"
      app:layout_constraintVertical_bias="0.432">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_first_name"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/firstname"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/first_name"
      android:textColor="@color/colorAccent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/imageView5"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView5"
      app:layout_constraintVertical_bias="0.051" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/lastName"
      android:layout_width="210dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="Name"
      android:textColorHint="@color/colorPrimary"
      app:errorEnabled="true"
      app:layout_constraintBottom_toBottomOf="@+id/lastNameTV"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/firstNameTV"
      app:layout_constraintTop_toTopOf="@+id/lastNameTV">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_last_name"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email"
      android:layout_width="210dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textEmailAddress"
      android:textColorHint="@color/colorPrimary"
      app:errorEnabled="true"
      app:layout_constraintBottom_toBottomOf="@+id/emailTV"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/lastName"
      app:layout_constraintTop_toTopOf="@+id/emailTV"
      app:layout_constraintVertical_bias="0.423">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password"
      android:layout_width="210dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_password"
      android:textColorHint="@color/colorPrimary"
      app:errorEnabled="true"
      app:layout_constraintBottom_toBottomOf="@+id/passwordTV"
      app:layout_constraintStart_toStartOf="@+id/email"
      app:layout_constraintTop_toTopOf="@+id/passwordTV">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/confirm_password"
      android:layout_width="210dp"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/hint_confirm_password"
      android:textColorHint="@color/colorPrimary"
      app:errorEnabled="true"
      app:layout_constraintBottom_toBottomOf="@+id/confirm_pwd_TV"
      app:layout_constraintStart_toStartOf="@+id/password"
      app:layout_constraintTop_toTopOf="@+id/confirm_pwd_TV"
      app:layout_constraintVertical_bias="0.538">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_confirm_password"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/lastNameTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:text="@string/last_name"
      android:textColor="@color/colorAccent"
      app:layout_constraintBottom_toTopOf="@+id/emailTV"
      app:layout_constraintEnd_toEndOf="@+id/firstname"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/firstname"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/emailTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="76dp"
      android:layout_marginTop="44dp"
      android:layout_marginBottom="92dp"
      android:text="@string/email"
      android:textColor="@color/colorAccent"
      app:layout_constraintBottom_toTopOf="@+id/passwordTV"
      app:layout_constraintEnd_toEndOf="@+id/lastNameTV"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lastNameTV" />

  <TextView
      android:id="@+id/passwordTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="44dp"
      android:text="@string/password"
      android:textColor="@color/colorAccent"
      app:layout_constraintEnd_toEndOf="@+id/emailTV"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/emailTV" />

  <TextView
      android:id="@+id/confirm_pwd_TV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="35dp"
      android:text="@string/hint_confirm_password"
      android:textColor="@color/colorAccent"
      app:layout_constraintEnd_toEndOf="@+id/passwordTV"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordTV" />

  <Button
      android:id="@+id/button_register"
      android:layout_width="142dp"
      android:layout_height="45dp"
      android:layout_marginTop="40dp"
      android:background="@color/colorAccent"
      android:text="@string/create_act"
      android:textColor="@android:color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>